--- a/src/Header.css
+++ b/src/Header.css
@@ -52,6 +52,7 @@
   margin-top: 0.5rem;
   font-weight: bold;
   font-family: "Cormorant Garamond", serif;
+  color: #fff;
 }
 
 @media (max-width: 1024px) {
